--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <ul class="people">
         <li class="one">PEOPLE</li>
-        <li>  <img src="img/SaraSoueidan.jpeg" alt="Sara Soueidan"> <span>Sara Soueidan</span></li>
-        <li><img src="img/RachelSmith.png" alt="Rachel Smith"><span>Rachel Smith</span></li>
+        <li > <img src="img/SaraSoueidan.jpeg" alt="Sara Soueidan"> <span>Sara Soueidan</span></li>
+        <li ><img src="img/RachelSmith.png" alt="Rachel Smith"><span>Rachel Smith</span></li>
         <li><img src="img/PeterFinlan.jpeg" alt="Peter Finlan"><span>Peter Finlan</span></li>
         <li><img src="img/PatrickCox.png" alt="Patrick Cox"><span>Patrick Cox</span></li>
         <li> <img src="img/TimHolman.jpeg" alt="Tim Holman"><span>Tim Holman</span></li>
@@ -27,22 +27,22 @@
 
     <ul class="popular">
         <li class="two">POPULAR</li>
-        <li> <img src="img/PagePreloadingEffect.png">Page Preloading Effect</li>
-        <li><img src="img/ArrowNavigationStyles.png" alt="Error">Arrow Navigation Styles</li>
-        <li><img src="img/HoverEffectsIdeasNew.png" alt="Error">Ideas for Subtle Hover Effects</li>
-        <li><img src="img/FreebieHalcyonDays.png" alt="Error">Halcyon Days Template</li>
-        <li><img src="img/ArticleIntroEffects.png" alt="Error">Inspiration for Article intro Effects</li>
-        <li><img src="img/DraggableDualViewSlideshow.png" alt="Error">Draggable Dual-View Slideshow</li>
+        <li> <img src="img/PagePreloadingEffect.png"><span>Page Preloading Effect</span></li>
+        <li><img src="img/ArrowNavigationStyles.png" alt="Error"><span>Arrow Navigation Styles</span></li>
+        <li><img src="img/HoverEffectsIdeasNew.png" alt="Error"><span>Ideas for Subtle Hover Effects</span></li>
+        <li><img src="img/FreebieHalcyonDays.png" alt="Error"><span>Halcyon Days Template</span></li>
+        <li><img src="img/ArticleIntroEffects.png" alt="Error"><span>Inspiration for Article intro Effects</span></li>
+        <li><img src="img/DraggableDualViewSlideshow.png" alt="Error"><span>Draggable Dual-View Slideshow</span></li>
     </ul>
 
     <ul class="recent">
         <li class="three">RECENT</li>
-        <li><img src="img/TooltipStylesInspiration.png" alt="Error">Tooltip Styles Inspiration</li>
-        <li><img src="img/AnimatedHeaderBackgrounds.png" alt="Error">Animated Background Headers</li>
-        <li><img src="img/OffCanvas.png" alt="Error">Off-Canvas Menu Effects</li>
-        <li><img src="img/TabStyles.png" alt="Error">Tab Styles Inspiration</li>
-        <li><img src="img/ResponsiveSVGs.png" alt="Error">Make SVGs Responsive with CSS</li>
-        <li><img src="img/NotificationStyles.png" alt="Error">Notification Styles Inspiration</li>
+        <li><img src="img/TooltipStylesInspiration.png" alt="Error"><span>Tooltip Styles Inspiration</span></li>
+        <li><img src="img/AnimatedHeaderBackgrounds.png" alt="Error"><span>Animated Background Headers</span></li>
+        <li><img src="img/OffCanvas.png" alt="Error"><span>Off-Canvas Menu Effects</span></li>
+        <li><img src="img/TabStyles.png" alt="Error"><span>Tab Styles Inspiration</span></li>
+        <li><img src="img/ResponsiveSVGs.png" alt="Error"><span>Make SVGs Responsive with CSS</span></li>
+        <li><img src="img/NotificationStyles.png" alt="Error"><span>Notification Styles Inspiration</span></li>
     </ul>
 
 </body>
